<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_dashboard"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_environment"
            android:icon="@drawable/ic_console_grey600_24dp"
            android:title="@string/drawer_environment" />
        <item
            android:id="@+id/drawer_projects"
            android:icon="@drawable/ic_code_tags_grey600_24dp"
            android:title="@string/drawer_projects" />
        <item
            android:id="@+id/drawer_leaderboard"
            android:icon="@drawable/ic_trophy_award_grey600_24dp"
            android:title="@string/drawer_leaderboard" />
    </group>
    <group
        android:id="@+id/group_user"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/ic_information_outline_grey600_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_logout_grey600_24dp"
            android:title="@string/logout" />
    </group>

</menu>
